Add-Function-User-Register

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="/register" method="post">
+    <form th:action="@{/register}" method="post">
         ユーザー名:
         <input type="text" name="username" /><br>
         パスワード:
