JavaScriptによるチャット実装

--- a/src/main/resources/templates/chatpage.html
+++ b/src/main/resources/templates/chatpage.html
@@ -10,6 +10,13 @@
             var sse = new EventSource('/chatpage/sse');
             sse.onmessage = function (event) {
                 console.log(event.data);
+                var message = JSON.parse(event.data);
+                var tr = document.createElement("tr");
+                var td = document.createElement("td");
+                var text = document.createTextNode(message['username'] + " : " + message['content']);
+                td.appendChild(text);
+                tr.appendChild(td);
+                document.getElementById("msg-table-body").appendChild(tr);
             }
         }
     </script>
@@ -22,11 +29,13 @@
         ようこそ [[${name}]]
     </h1>
 
-    <div th:each="msg:${messages}">
-        <tr>
-            <td>[[${msg.username}]] : [[${msg.content}]]</td>
-        </tr>
-    </div>
+    <table>
+        <tbody id="msg-table-body">
+            <tr th:each="msg:${messages}">
+                <td>[[${msg.username}]] : [[${msg.content}]]</td>
+            </tr>
+        </tbody>
+    </table>
     <br>
     <form th:action="@{/chatpage}" method="post">
         send message:
