--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -14,6 +14,14 @@
         ようこそ [[${name}]]
     </h1>
 
+    ルーム作成
+    <form method="post" th:action="@{/room/register}" th:object="${registerRoomForm}">
+        ルーム名:<br>
+        <input type="text" th:field="*{name}" required />
+        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span><br>
+        <input type="submit" value="登録" />
+    </form>
+
     <a href="/chatpage">チャットページへ</a>
 
 </body>
