DBに格納されたroomへのリンクを表示する.

--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -14,7 +14,7 @@
         ようこそ [[${name}]]
     </h1>
 
-    ルーム作成
+    <h2>ルーム作成</h2>
     <form method="post" th:action="@{/room/register}" th:object="${registerRoomForm}">
         ルーム名:<br>
         <input type="text" th:field="*{name}" required />
@@ -23,6 +23,16 @@
     </form>
 
     <a href="/chatpage">チャットページへ</a>
+
+    <br>
+
+    <div th:if="!${#lists.isEmpty(rooms)}">
+        <h2>ルーム入室</h2>
+    </div>
+    
+    <div th:each="room:${rooms}">
+        <a th:href="@{/chatpage(id=${room.id})}">[[${room.name}]]</a>
+    </div>
 
 </body>
 
