リマインダー登録用フォームの作成.

--- a/src/main/resources/templates/chatpage.html
+++ b/src/main/resources/templates/chatpage.html
@@ -25,7 +25,8 @@
 </head>
 
 <body>
-    <div><a href="/logout">ログアウト</a></div>
+    <div><a href="/userpage">ユーザーページへ戻る</a></div>
+    <div align="right"><a href="/logout">ログアウト</a></div>
 
     <h1>
         ようこそ [[${name}]]
