--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -5,6 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Page</title>
+
+
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js'></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#calendar').fullCalendar({
+                events: {
+                    url: '/event/all'
+                }
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -43,6 +58,7 @@
         <input type="submit" value="登録" />
     </form>
 
+    <div id='calendar'></div>
 </body>
 
 </html>
