Last-Event-IDを利用した未送信メッセージの送信

--- a/src/main/resources/templates/chatpage.html
+++ b/src/main/resources/templates/chatpage.html
@@ -9,7 +9,7 @@
         window.onload = function () {
             var params = [...new URLSearchParams(location.search).entries()]
                 .reduce((obj, e) => ({ ...obj, [e[0]]: e[1] }), {});
-            var sse = new EventSource('/chatpage/sse?id=' + params['id']);
+            var sse = new EventSource('/chatpage/sse?id=' + params['id'] + '&initmessageid=[[${initmessageid}]]');
             sse.onmessage = function (event) {
                 console.log(event.data);
                 var message = JSON.parse(event.data);
