--- a/src/main/resources/templates/chatpage.html
+++ b/src/main/resources/templates/chatpage.html
@@ -6,44 +6,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatPage</title>
     <script>
+        function scrollToBottom() {
+            var wapper = document.getElementsByClassName("chat__wrapper")[0];
+            wapper.scrollTop = wapper.scrollHeight;
+        }
+
+        function shouldScroll() {
+            var wapper = document.getElementsByClassName("chat__wrapper")[0];
+            return wapper.scrollTop + wapper.clientHeight !== wapper.scrollHeight;
+        }
+
         window.onload = function () {
+            // 下部にスクロール
+            scrollToBottom();
+
+            // Shtft+Enterで改行
+            var textarea = document.getElementById("new_message_form__input");
+            textarea.addEventListener("keydown", e => {
+                var form = document.getElementById("new_message_form");
+                if (e.keyCode == 13) { // Enterが押された
+                    if (!e.shiftKey) {
+                        e.preventDefault();
+                        form.submit();
+                    }
+                }
+            });
+
+            // SSEチャット更新
             var params = [...new URLSearchParams(location.search).entries()]
                 .reduce((obj, e) => ({ ...obj, [e[0]]: e[1] }), {});
             var sse = new EventSource('/chatpage/sse?id=' + params['id'] + '&initmessageid=[[${initmessageid}]]');
             sse.onmessage = function (event) {
                 console.log(event.data);
                 var message = JSON.parse(event.data);
-                var tr = document.createElement("tr");
-                var td = document.createElement("td");
-                var text = document.createTextNode(message['username'] + " : " + message['content']);
-                td.appendChild(text);
-                tr.appendChild(td);
-                document.getElementById("msg-table-body").appendChild(tr);
+
+                var message_div = document.createElement("div");
+                message_div.className = "chat__message";
+
+                var message_name = document.createElement("div");
+                message_name.className = "chat__message__name";
+                message_name.textContent = message['username'];
+
+                var message_content = document.createElement("div");
+                message_content.textContent = message['content'];
+
+                message_div.appendChild(message_name);
+                message_div.appendChild(message_content);
+                document.getElementsByClassName("chat__wrapper")[0].appendChild(message_div);
+
+                // 下部の場合は下にスクロール
+                if (shouldScroll()) {
+                    scrollToBottom();
+                }
             }
         }
     </script>
+
+    <style>
+        #new_message_form__input {
+            position: absolute;
+            display: block;
+            margin: auto;
+            left: 20%;
+            bottom: 3%;
+            height: 5%;
+            width: 70%;
+            font-weight: 100;
+            padding-left: 28px;
+            font-family: "lato";
+            font-size: 12px;
+            opacity: 0.6;
+            color: #2C2D30;
+        }
+
+        .chat__wrapper {
+            overflow: auto;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            max-height: 100%;
+        }
+
+        .chat__message {
+            font-size: 18px;
+            padding: 10px 20px;
+            color: #000;
+            background-color: #e6e7ec;
+            position: relative;
+            margin: 15px 0;
+        }
+
+        .chat {
+            height: calc(100vh - 220px);
+            background-color: #fff;
+            position: relative;
+            width: 70vw;
+            left: 20%;
+        }
+
+        .chat__message__name {
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
-    <div><a href="/userpage">ユーザーページへ戻る</a></div>
-    <div align="right"><a href="/logout">ログアウト</a></div>
+    <a href="/userpage">ユーザーページへ戻る</a>
+    <a style="float: right;" href="/logout">ログアウト</a>
 
     <h1>
         ようこそ [[${name}]]
     </h1>
 
-    <table>
-        <tbody id="msg-table-body">
-            <tr th:each="msg:${messages}">
-                <td>[[${msg.username}]] : [[${msg.content}]]</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="chat">
+        <div class="chat__wrapper">
+            <div class="chat__message" th:each="msg:${messages}">
+                <div class="chat__message__name">[[${msg.username}]]</div>
+                <div>[[${msg.content}]]</div>
+            </div>
+        </div>
+    </div>
     <br>
-    <form th:action="@{/chatpage(id=${id})}" method="post">
-        send message:
-        <input type="text" name="send_message" />
-        <input type="submit" value="送信" />
+    <form th:action="@{/chatpage(id=${id})}" method="post" id="new_message_form">
+        <input id="new_message_form__input" name="send_message" placeholder="Message" type="text">
     </form>
 </body>
 
