--- a/src/main/resources/templates/chatpage.html
+++ b/src/main/resources/templates/chatpage.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatPage</title>
     <script>
+        function flexTextarea(el) {
+            const dummy = el.querySelector('.FlexTextarea__dummy')
+            el.querySelector('.FlexTextarea__textarea').addEventListener('input', e => {
+                dummy.textContent = e.target.value + '\u200b'
+            })
+        }
+
         function scrollToBottom() {
             var wapper = document.getElementsByClassName("chat__wrapper")[0];
             wapper.scrollTop = wapper.scrollHeight;
@@ -20,17 +27,27 @@
             // 下部にスクロール
             scrollToBottom();
 
-            // Shtft+Enterで改行
-            var textarea = document.getElementById("new_message_form__input");
+            var form = document.getElementById("new_message_form");
+            var textarea = document.getElementById("NewMessageForm__textarea");
+            var wapper = document.getElementsByClassName("chat__wrapper")[0];
+            var send_flag = true;
             textarea.addEventListener("keydown", e => {
-                var form = document.getElementById("new_message_form");
-                if (e.keyCode == 13) { // Enterが押された
-                    if (!e.shiftKey) {
-                        e.preventDefault();
-                        form.submit();
-                    }
+                if (send_flag && e.keyCode == 13 && e.ctrlKey) {
+                    send_flag = false;
+                    e.preventDefault();
+                    form.submit();
                 }
+                setTimeout(() => {
+                    var wapper_bottom = document.getElementsByClassName("FlexTextarea")[0].offsetHeight + 5;
+                    wapper.style.bottom = wapper_bottom + "px";
+                    wapper.style.maxHeight = (document.getElementsByClassName("chat")[0].offsetHeight - wapper_bottom) + "px";
+                    if (shouldScroll()) {
+                        scrollToBottom();
+                    }
+                }, 1);
             });
+
+            document.querySelectorAll('.FlexTextarea').forEach(flexTextarea);
 
             // SSEチャット更新
             var params = [...new URLSearchParams(location.search).entries()]
@@ -48,6 +65,7 @@
                 message_name.textContent = message['username'];
 
                 var message_content = document.createElement("div");
+                message_content.className = "chat__message__content";
                 message_content.textContent = message['content'];
 
                 message_div.appendChild(message_name);
@@ -63,26 +81,51 @@
     </script>
 
     <style>
+        .chat__wrapper::-webkit-scrollbar {
+            background-color: #fff;
+            width: 16px
+        }
+
+        .chat__wrapper::-webkit-scrollbar-track {
+            background-color: #fff;
+        }
+
+        .chat__wrapper::-webkit-scrollbar-thumb {
+            background-color: #babac0;
+            border-radius: 16px;
+            border: 4px solid #fff;
+        }
+
+        #new_message_form {
+            display: block;
+        }
+
         #new_message_form__input {
             position: absolute;
-            display: block;
-            margin: auto;
-            left: 20%;
-            bottom: 3%;
-            height: 5%;
-            width: 70%;
-            font-weight: 100;
+            height: 60px;
+            width: 90%;
+            padding-top: 10px;
+            padding-bottom: 5px;
             padding-left: 28px;
-            font-family: "lato";
-            font-size: 12px;
-            opacity: 0.6;
-            color: #2C2D30;
+            font-size: 20px;
+            color: #000000;
+            bottom: 0px;
+            line-height: 25px;
+            box-sizing: border-box;
+            resize: none;
+        }
+
+        #NewMessageFrom__button {
+            position: absolute;
+            vertical-align: middle;
+            right: 0;
+            bottom: 0;
         }
 
         .chat__wrapper {
             overflow: auto;
             position: absolute;
-            bottom: 0;
+            bottom: 45px;
             left: 0;
             right: 0;
             max-height: 100%;
@@ -98,7 +141,7 @@
         }
 
         .chat {
-            height: calc(100vh - 220px);
+            height: calc(100vh - 150px);
             background-color: #fff;
             position: relative;
             width: 70vw;
@@ -107,6 +150,78 @@
 
         .chat__message__name {
             font-weight: bold;
+        }
+
+        .chat__message__content {
+            white-space: pre-wrap;
+        }
+
+        .FlexTextarea {
+            overflow: hidden;
+            position: absolute;
+            font-size: 1rem;
+            line-height: 1.8;
+            width: calc(100% - 55px);
+            bottom: 0;
+            max-height: 50%;
+        }
+
+        .FlexTextarea__dummy {
+            overflow: hidden;
+            visibility: hidden;
+            box-sizing: border-box;
+            padding: 5px 15px;
+            min-height: 40px;
+            max-height: 50%;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            border: 1px solid;
+        }
+
+        .FlexTextarea__textarea {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: block;
+            overflow: auto;
+            box-sizing: border-box;
+            padding: 5px 15px;
+            width: 100%;
+            height: 100%;
+            background-color: transparent;
+            border: 1px solid #b6c3c6;
+            border-radius: 4px;
+            color: inherit;
+            font: inherit;
+            letter-spacing: inherit;
+            resize: none;
+        }
+
+        .FlexTextarea__textarea:focus {
+            box-shadow: 0 0 0 4px rgba(35, 167, 195, 0.3);
+            outline: 0;
+        }
+
+        .material__button {
+            display: inline-block;
+            background-color: #42a823;
+            color: #FFF;
+            font-size: 1em;
+            line-height: 1;
+            text-decoration: none;
+            letter-spacing: 2px;
+            padding: 10px 8px;
+            border: 0;
+            border-radius: 3px;
+            cursor: pointer;
+            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+            -webkit-tap-highlight-color: transparent;
+            transition: .3s ease-out;
+        }
+
+        .material__button:hover {
+            box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
@@ -123,14 +238,21 @@
         <div class="chat__wrapper">
             <div class="chat__message" th:each="msg:${messages}">
                 <div class="chat__message__name">[[${msg.username}]]</div>
-                <div>[[${msg.content}]]</div>
+                <div class="chat__message__content">[[${msg.content}]]</div>
             </div>
         </div>
+        <form th:action="@{/chatpage(id=${id})}" method="post" id="new_message_form">
+            <div class="FlexTextarea">
+                <div class="FlexTextarea__dummy" aria-hidden="true"></div>
+                <textarea id="NewMessageForm__textarea" class="FlexTextarea__textarea" name="send_message"
+                    placeholder="Message"></textarea>
+            </div>
+            <button class="material__button" id="NewMessageFrom__button" type="submit" name="action">
+                送信
+            </button>
+        </form>
     </div>
-    <br>
-    <form th:action="@{/chatpage(id=${id})}" method="post" id="new_message_form">
-        <input id="new_message_form__input" name="send_message" placeholder="Message" type="text">
-    </form>
+    <div style="margin-left: 21%; font-size: 12px;">Ctrl+Enterで送信</div>
 </body>
 
 </html>
