チャットページにルーム名を表示する

--- a/src/main/resources/templates/chatpage.html
+++ b/src/main/resources/templates/chatpage.html
@@ -239,7 +239,7 @@
     <a style="float: right;" href="/logout">ログアウト</a>
 
     <h1>
-        ようこそ [[${name}]]
+        [[${name}]]
     </h1>
 
     <div class="chat">
