--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,29 +7,63 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>HondaBoard</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet"
-        crossorigin="anonymous" />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js'></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#calendar').fullCalendar({
+                events: {
+                    url: '/event/all'
+                }
+            });
+        });
+    </script>
+    <style>
+        #root {
+            display: flex;
+        }
+
+        #calendar {
+            width: calc(100vw - 300px);
+            max-height: calc(100vw - 300px);
+            display: inline-block;
+        }
+
+        #login-form-wrap {
+            display: inline-block;
+            padding-right: 8px;
+        }
+
+        .form__label {
+            display: block;
+            float: left;
+            width: 85px;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
-        <form class="form-signin" method="post" action="/login">
-            <h2 class="form-signin-heading">ログインしてください</h2>
-            <p>
-                <label for="username" class="sr-only">Username</label>
-                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required
-                    autofocus>
-            </p>
-            <p>
-                <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Password"
-                    required>
-            </p>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-            <a href="/register">新規登録はこちら</a>
-        </form>
+    <div id="root">
+        <div id="login-form-wrap">
+            <form class="form-signin" method="post" action="/login">
+                <h2 class="form-signin-heading">ログイン</h2>
+                <p>
+                    <label for="username" class="form__label sr-only">Username</label>
+                    <input type="text" id="username" name="username" class="form-control" placeholder="Username"
+                        required autofocus>
+                </p>
+                <p>
+                    <label for="password" class="form__label sr-only">Password</label>
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Password"
+                        required>
+                </p>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+                <a href="/register">新規登録はこちら</a>
+            </form>
+        </div>
+        <div id='calendar'></div>
     </div>
 </body>
 
