ユーザーページとログインページに最新10件のコメントを表示するようにする.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,6 +65,11 @@
         </div>
         <div id='calendar'></div>
     </div>
+
+    最新10件のコメント
+    <div class="chat__message" th:each="msg:${messages}">
+        [[${msg.room_name}]] [[${msg.username}]] [[${msg.content}]]
+    </div>
 </body>
 
 </html>
