--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -59,6 +59,11 @@
     </form>
 
     <div id='calendar'></div>
+
+    最新10件のコメント
+    <div class="chat__message" th:each="msg:${messages}">
+        [[${msg.room_name}]] [[${msg.username}]] [[${msg.content}]]
+    </div>
 </body>
 
 </html>
