--- a/src/main/resources/templates/userprofile.html
+++ b/src/main/resources/templates/userprofile.html
@@ -66,7 +66,10 @@
 
 <body>
 
-    <div><a href="/logout">ログアウト</a></div>
+    <div>
+        <a href="/userpage">ユーザーページへ戻る</a>
+        <a style="float: right;" href="/logout">ログアウト</a>
+    </div>
 
     <h1>
         ようこそ [[${name}]]
