--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <div><a href="/logout">ログアウト</a></div>
+    <a style="float: right;" href="/logout">ログアウト</a>
 
     <h1>
         ようこそ [[${name}]]
@@ -49,22 +49,29 @@
         <a th:href="@{/chatpage(id=${room.id})}">[[${room.name}]]</a>
     </div>
 
-    <h2>リマインダー</h2>
-    <form method="POST" th:action="@{/event/register}" th:object="${registerEventForm}">
-        リマインダータイトル<input type="text" th:field="*{title}" required />
-        <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span><br>
-        開始日<input type="date" th:field="*{start_at}" max="9999-12-31">
-        <span th:if="${#fields.hasErrors('start_at')}" th:errors="*{start_at}"></span>
-        終了日<input type="date" th:field="*{end_at}" max="9999-12-31">
-        <span th:if="${#fields.hasErrors('end_at')}" th:errors="*{end_at}"></span><br>
-        <input type="submit" value="登録" />
-    </form>
+    <div>
+        <h2>リマインダー</h2>
+        <form method="POST" th:action="@{/event/register}" th:object="${registerEventForm}">
+            リマインダータイトル<input type="text" th:field="*{title}" required />
+            <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span><br>
+            開始日<input type="date" th:field="*{start_at}" max="9999-12-31">
+            <span th:if="${#fields.hasErrors('start_at')}" th:errors="*{start_at}"></span>
+            終了日<input type="date" th:field="*{end_at}" max="9999-12-31">
+            <span th:if="${#fields.hasErrors('end_at')}" th:errors="*{end_at}"></span><br>
+            <input type="submit" value="登録" />
+        </form>
 
-    <div id='calendar'></div>
+        <div id='calendar'></div>
 
-    最新10件のコメント
-    <div class="chat__message" th:each="msg:${messages}">
-        [[${msg.room_name}]] [[${msg.username}]] [[${msg.content}]]
+    </div>
+
+    <div>
+        <div th:if="!${#lists.isEmpty(messages)}">
+            <h2>最新10件のコメント</h2>
+        </div>
+        <div class="chat__message" th:each="msg:${messages}">
+            [[${msg.room_name}]] [[${msg.username}]] [[${msg.content}]]
+        </div>
     </div>
 </body>
 
