パスワード変更機能の実装

--- a/src/main/resources/templates/userprofile.html
+++ b/src/main/resources/templates/userprofile.html
@@ -74,6 +74,8 @@
     <h1>
         ようこそ [[${name}]]
     </h1>
+    <p th:utext="${system_msg}"></p>    
+    <a href="/profile/changepw">パスワード変更はこちら</a><br>
     <img src="/profile/image" />
     <div>
         <h2>
